@@ -70,12 +70,14 @@ class Mnemosyne(Component):
           "CrammingPlugin"),
          ("mnemosyne.libmnemosyne.statistics_pages.schedule",
           "Schedule"),
+         ("mnemosyne.libmnemosyne.statistics_pages.retention_score",
+          "RetentionScore"),
+         ("mnemosyne.libmnemosyne.statistics_pages.cards_added",
+          "CardsAdded"), 
          ("mnemosyne.libmnemosyne.statistics_pages.grades",
           "Grades"),
          ("mnemosyne.libmnemosyne.statistics_pages.easiness",
-          "Easiness"),
-         ("mnemosyne.libmnemosyne.statistics_pages.cards_added",
-          "CardsAdded"),         
+          "Easiness"),        
          ("mnemosyne.libmnemosyne.statistics_pages.current_card",
           "CurrentCard"),
          ("mnemosyne.libmnemosyne.file_formats.mnemosyne1_mem",
